# Projeto-DeSCin

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  fly.toml  main.cpp  main_api.cpp  main_blockchain.cpp  minha-wallet_private.pem  package-lock.json  test_db
.claude/: settings.local.json
.github/workflows/: deploy-api.yaml  deploy-api.yml
api/: .dockerignore  .gitignore  descin_node.cpp  descin_node.hpp  main.cpp  testes.http
api/controllers/: auth_controller.cpp  auth_controller.hpp  controller.hpp  projects_controller.cpp  projects_controller.hpp  user_controller.cpp  user_controller.hpp  wallet_controller.cpp  wallet_controller.hpp  wallets_controller.cpp  wallets_controller.hpp
api/middleware/: auth_middleware.cpp  auth_middleware.hpp
api/models/: model.hpp
api/routes/: auth_routes.cpp  auth_routes.hpp  projects_routes.cpp  projects_routes.hpp  routes.cpp  routes.hpp  user_routes.cpp  user_routes.hpp  wallets_routes.cpp  wallets_routes.hpp
api/services/: auth_service.cpp  auth_service.hpp  projects_service.cpp  projects_service.hpp  service.hpp  user_service.cpp  user_service.hpp  wallets_service.cpp  wallets_service.hpp
backend/blockchain-core/src/: main.cpp  transaction.hpp
backend/projects-core/: investiment_tx.cpp  investiment_tx.hpp  project_create_tx.cpp  project_create_tx.hpp  project_state.cpp  project_state.hpp  projects.cpp  projects.hpp  refund_tx.cpp  refund_tx.hpp
blockchain-core/src/: block.hpp  blockchain.cpp  blockchain.hpp  mempool.cpp  transaction.cpp  wallet.cpp  wallet.hpp
blockchain-core/src/tests/: function_test_blockchain.hpp
blockchain-core/src/utils/: date.hpp
blockchain-core/src/utils/encryptation/: decode_signature.cpp
core/: .gitignore  process.env
core/src/: block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  main.cpp  mempool.cpp  mempool.hpp  project_repository.cpp  project_repository.hpp  transaction.cpp  transaction.hpp  wallet.cpp  wallet.hpp
core/src/api/: api_types.hpp
core/src/api/middleware/: auth_middleware.cpp  auth_middleware.hpp
core/src/api/routes/: project_routes.hpp
core/src/utils/: date.cpp  date.hpp  decode_signature.cpp  decode_signature.hpp  generate_key_pair.hpp  hash.cpp  hash.hpp  hash_validation.cpp  hash_validation.hpp  openssl_utils.hpp  string_to_pbkey.cpp  string_to_pbkey.hpp
core/src/utils/encryptation/: generate_key_pair.hpp  sign_message.hpp  string_to_pbkey.hpp
core/src/utils/hashing/: hash.cpp  hash.hpp  hash_validation.hpp
data/: projects.json
database/: database.cpp  database.hpp  test_database.cpp
database/supabase/: supabase.cpp  supabase.envy  supabase.hpp
databse/: database.cpp
docs/: index.html  style.css
docs/assets/: index-B3Y2iSbm.css  index-BwxOi3A2.js  index-CNL7PfMO.css  index-CesxOzTw.js  index-CtIzI6pH.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/adapters/: projectAdapter.ts
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/charts/: DonutChart.tsx  PortfolioChart.tsx  PriceChart.tsx  Sparkline.tsx
frontend/src/components/dashboard/: AssetsTable.tsx  DashboardChart.tsx  FeaturedProjects.tsx  PortfolioOverview.tsx
frontend/src/components/layout/: AppLayout.tsx  BottomNav.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/project/: AssetRow.tsx  ProjectCard.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Skeleton.tsx  TickerLabel.tsx
frontend/src/components/wallet/: AllocationDonut.tsx  WalletHero.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: usePriceHistory.ts  useProject.ts  useProjects.ts  useTransactions.ts  useWallet.ts
frontend/src/mocks/: data.ts
frontend/src/pages/: Configuracoes.tsx  Dashboard.tsx  Depositar.tsx  Explorar.tsx  Projeto.tsx  Wallet.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/pages/curadoria/: CuratorReview.tsx  index.tsx
frontend/src/pages/founder/: CriarProjeto.tsx  ProjetoDetail.tsx  index.tsx
frontend/src/services/: api.ts  auth.ts  projects.ts  transactions.ts  wallet.ts
frontend/src/stores/: auth.store.ts  notification.store.ts  project.store.ts  projects.store.ts  ui.store.ts  wallet.store.ts
frontend/src/types/: index.ts
frontend/src/utils/: briefing.ts  color.ts  format.ts  period.ts
projects-core/: project_repository.cpp  project_repository.hpp
